--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -244,45 +244,49 @@ W animacjach nawet podstawowych ruchów pojawia się wiele problemów do rozwią
 Joanna Lee, \textit{Learning Unreal Engine Game Development}, Packt Publishing, 2016
 
 \bibitem{docs-ue4-features}
-\textit{Engine Features}, \url{https://docs.unrealengine.com/latest/INT/Engine/index.html} (dostęp 30.12.2017)
+\textit{Engine Features}. \url{https://docs.unrealengine.com/latest/INT/Engine/index.html} (dostęp 30.12.2017)
 
 \bibitem{docs-blueprints}
-\textit{Blueprints Visual Scripting}, \url{https://docs.unrealengine.com/latest/INT/Engine/Blueprints/index.html} (dostęp 30.12.2017)
+\textit{UE4 Documentation Blueprints Visual Scripting}. \url{https://docs.unrealengine.com/latest/INT/Engine/Blueprints/index.html} (dostęp 30.12.2017)
+
+\bibitem{docs-playercontroller}
+\textit{UE4 Documentation Player Controller}. \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/Controller/PlayerController/}  (dostęp 3.01.2018)
+
+\bibitem{docs-charactermovementcomponent}
+\textit{UE4 Documentation Character Movement Component}.  \url{https://docs.unrealengine.com/latest/INT/Gameplay/Networking/CharacterMovementComponent/index.html}  (dostęp 3.01.2018)
+
+\bibitem{docs-profiler}
+\textit{UE4 Documentation Performance and Profiling}. \url{https://docs.unrealengine.com/latest/INT/Engine/Performance/}  (dostęp 3.01.2018)
 
 \bibitem{docs-gameplay-framework}
-\textit{Gameplay Framework Quick Reference}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/index.html} (dostęp 31.12.2017)
+\textit{Gameplay Framework Quick Reference}. \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/index.html} (dostęp 31.12.2017)
 
 \bibitem{wiki-game-engine}
-\textit{,,Game engine``, Wikipedia}, \url{https://en.wikipedia.org/wiki/Game_engine} {\mbox(dostęp 29.12.2017)}
+\textit{,,Game engine``, Wikipedia}. \url{https://en.wikipedia.org/wiki/Game_engine} {\mbox(dostęp 29.12.2017)}
+
+\bibitem{uewiki-charmovement}
+\textit{UE4 Wiki - Authoritative Networked Character Movement}. \url{https://wiki.unrealengine.com/Authoritative_Networked_Character_Movement}  (dostęp 3.01.2018)
 
 \bibitem{unreal-wiki-replication}
-\textit{Everything you ever wanted to know about replication (but were afraid to ask)}, \url{https://wiki.beyondunreal.com/Everything_you_ever_wanted_to_know_about_replication_\%28but_were_afraid_to_ask\%29#Function_call_replication_-_Sending_messages_between_server_and_client} (dostęp 30.12.2017)
+\textit{Everything you ever wanted to know about replication (but were afraid to ask)}. \url{https://wiki.beyondunreal.com/Everything_you_ever_wanted_to_know_about_replication_\%28but_were_afraid_to_ask\%29#Function_call_replication_-_Sending_messages_between_server_and_client} (dostęp 30.12.2017)
 
 \bibitem{nasdaq-video-games-industry}
-Trevir Nath, \textit{Investing in Video Games: This Industry Pulls In More Revenue Than Movies, Music},
+Trevir Nath, \textit{Investing in Video Games: This Industry Pulls In More Revenue Than Movies, Music}.
 \url{http://www.nasdaq.com/article/investing-in-video-games-this-industry-pulls-in-more-revenue-than-movies-music-cm634585} {\mbox(dostęp 29.12.2017)}
 
 \bibitem{the-human-race}
-\textit{The Human Race – An Inside Look at the Technology Behind the Groundbreaking Real-Time Film from Epic Games, The Mill and Chevrolet}, \url{https://www.unrealengine.com/en-US/showcase/the-human-race-an-inside-look-at-the-technology-behind-the-groundbreaking-real-time-film-from-epic-games-the-mill-and-chevrolet} (dostęp 30.12.2017)
+\textit{The Human Race – An Inside Look at the Technology Behind the Groundbreaking Real-Time Film from Epic Games, The Mill and Chevrolet}. \url{https://www.unrealengine.com/en-US/showcase/the-human-race-an-inside-look-at-the-technology-behind-the-groundbreaking-real-time-film-from-epic-games-the-mill-and-chevrolet} (dostęp 30.12.2017)
 
 \bibitem{ikea-vr}
-\textit{VIRTUAL REALITY - INTO THE MAGIC}, \url{http://www.ikea.com/ms/en_US/this-is-ikea/ikea-highlights/Virtual-reality/index.html} (dostęp 30.12.2017)
+\textit{Virtual Reality- Into the magic}. \url{http://www.ikea.com/ms/en_US/this-is-ikea/ikea-highlights/Virtual-reality/index.html} (dostęp 30.12.2017)
 
 \bibitem{whats-rigging}
-Justin Slick, \textit{What is Rigging? Preparing a 3D Model For Animation }, \url{https://www.lifewire.com/what-is-rigging-2095}  (dostęp 3.01.2018)
-
-\bibitem{docs-playercontroller}
-\textit{UE4 - Documentation - Player Controller}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/Controller/PlayerController/}  (dostęp 3.01.2018)
-
-\bibitem{docs-charactermovementcomponent}
-\textit{UE4 - Documentation - Character Movement Component}, \url{https://docs.unrealengine.com/latest/INT/Gameplay/Networking/CharacterMovementComponent/index.html}  (dostęp 3.01.2018)
-
-\bibitem{uewiki-charmovement}
-\textit{UE4 Wiki - Authoritative Networked Character Movement}, \url{https://wiki.unrealengine.com/Authoritative_Networked_Character_Movement}  (dostęp 3.01.2018)
+Justin Slick, \textit{What is Rigging? Preparing a 3D Model For Animation }. \url{https://www.lifewire.com/what-is-rigging-2095}  (dostęp 3.01.2018)
 
 
-\bibitem{docs-profiler}
-\textit{UE4 - Documentation - Performance and Profiling}, \url{https://docs.unrealengine.com/latest/INT/Engine/Performance/}  (dostęp 3.01.2018)
+
+
+
 
 \end{thebibliography}
 
