--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -145,9 +145,8 @@ Wywołanie pliku wykonywalnego z grą ({\em thesis\_1.exe}) powoduje uruchomieni
 \section{Interfejs}
 	\label{interface}
 	Podstawę interfejsu w UE4 stanowią {\em widgety} czyli elementy posiadające pewną logikę, które można wyświetlać w oknie użytkownika w warstwie interfejsu. Są to na przykład przyciski, listy, suwaki, pola tekstowe i tym podobne. Za pomocą edytora {\em widgetów} z podstawowych {\em widgetów} buduje się bardziej skomplikowane (na przykład menu główne lub tablica wyników), z których konstruuje się docelowy interfejs.
-	\newline
-	\newline W przypadku gry ,,thesis\_1`` {\em widgety} wyświetlane są poprzez wywoływanie odpowiednich funkcji z {\em GameInfoInstance} (rys. \ref{fig-save-game-check}, \ref{fig-show-host-menu}). 
-	\newline Z menu głównego grający ma możliwość przejścia do menu tworzenia lub dołączania do gry (rozdział \ref{networking}), menu opcji (rozdział \ref{wybor-postaci}) oraz zamknięcia gry.
+\newline \indent W przypadku gry ,,thesis\_1`` {\em widgety} wyświetlane są poprzez wywoływanie odpowiednich funkcji z {\em GameInfoInstance} (rys. \ref{fig-save-game-check}, \ref{fig-show-host-menu}). 
+\newline \indent Z menu głównego grający ma możliwość przejścia do menu tworzenia lub dołączania do gry (rozdział \ref{networking}), menu opcji (rozdział \ref{wybor-postaci}) oraz zamknięcia gry.
 
 	\begin{figure}
 		\centering
@@ -203,16 +202,16 @@ W celu dodania możliwości uniku polegającego na gwałtownym odskoku postaci w
 
 \section{Networking -- tworzenie oraz dołączanie do rozgrywki sieciowej}
 	\label{networking}
-,,thesis\_1`` jest grą sieciową i do pełnego działania wymaga przynajmniej dwóch komputerów, z których jeden pełni rolę serwera, a pozostałe są klientami. W UE4 serwer może działać w jednym z dwóch trybów sieci \cite{docs-network-modes}:
+,,thesis\_1`` jest grą sieciową i do kompletnej rozgrywki wymaga przynajmniej dwóch komputerów, z których jeden pełni rolę serwera, a pozostałe są klientami. W UE4 serwer może działać w jednym z dwóch trybów sieci \cite{docs-network-modes}:
 \begin{description}
 \item[NM\_DedicatedServer:]wymaga stworzenia oddzielnego oprogramowania serwera, które pozbawione jest między innymi elementów związanych z grafiką, dźwiękami czy wejściem. Dzięki temu więcej zasobów komputera wykorzystywanych jest na obliczenia związane z obsługą podłączonych klientów. Gracze do podłączenia i prowadzenia rozgrywki korzystają z oprogramowania klienckiego. Nie jest możliwe granie z poziomu serwera. To podejście stosowane jest w przypadku gier ze skomplikowaną, wymagającą komunikacją sieciową.
 
-\item[NM\_ListenServer:]zarówno serwer i klienci korzystają z dokładnie tego samego oprogramowania, a komputer będący serwerem jest jednocześnie klientem. Sprawia to, że program w wielu miejscach musi sprawdzać, w jakiej roli jest obecnie używany i na tej podstawie wykonywać różną logikę. Wydajność jest niższa niż w przypadku serwera dedykowanego w zamian za możliwość prowadzenia rozgrywki z poziomu serwera.
+\item[NM\_ListenServer:]zarówno serwer i klienci korzystają z dokładnie tego samego oprogramowania, a komputer będący serwerem jest jednocześnie klientem. Wydajność jest niższa niż w przypadku serwera dedykowanego w zamian za możliwość prowadzenia rozgrywki z poziomu serwera.
 \end{description}
 
-W ,,thesis\_1`` wykorzystano tryb {\em NM\_ListenServer} ze względu na zapewnianą przez niego łatwość rozpoczęcia rozgrywki i niskie wymagania sieciowe gry. W implementacji sieciowych aspektów rozgrywki wykorzystywano głównie zdalne wywoływanie procedur (co wymaga sprecyzowania, czy ma być ona wykonywana na serwerze czy na kliencie), sprawdzania roli instancji gry to znaczy czy obecnie wykonujemy kod na serwerze czy na~kliencie~(rys. \ref{switch-has-authority}) oraz oznaczania {\em actorów} do replikacji czyli przesyłania informacji o nich między serwerem, a klientami.
-\newline \indent Łączenie z serwerem inicjowane jest w menu {\em Find game} poprzez automatyczne wyszukanie gry w sieci lokalnej lub podanie adresu IP serwera w Internecie lub sieci lokalnej. Następnie na serwerze wykonywana jest funkcja {\em OnPostLogin} (rys. \ref{switch-has-authority}), która inicjuje wczytanie danych z pliku łączącego się gracza, pobiera je od niego i na ich podstawie przydziela mu postać.
+W ,,thesis\_1`` wykorzystano tryb {\em NM\_ListenServer} ze względu na zapewnianą przez niego łatwość rozpoczęcia rozgrywki i niskie wymagania sieciowe gry. W implementacji sieciowych aspektów rozgrywki wykorzystywano głównie zdalne wywoływanie procedur, co wymaga sprecyzowania, czy mają one być wykonywane na serwerze czy na kliencie, sprawdzania roli instancji gry to znaczy czy obecnie wykonujemy kod na serwerze czy na~kliencie~(rys. \ref{switch-has-authority}) oraz oznaczania {\em actorów} do replikacji czyli przesyłania informacji o nich między serwerem, a klientami.
 \newline \indent Utworzenie serwera odbywa się poprzez menu {\em Host game}, a jego widoczność zależy od konfiguracji sieciowej gracza i jego dostawcy Internetu. Gra ,,thesis\_1`` korzysta z portu 7777 (domyślnego w UE4).
+\newline \indent Łączenie z serwerem inicjowane jest w menu {\em Find game} poprzez automatyczne wyszukanie gry w sieci lokalnej lub podanie adresu IP serwera w Internecie lub sieci lokalnej. Następnie na serwerze wykonywana jest funkcja {\em OnPostLogin} (rys. \ref{switch-has-authority}), która inicjuje wczytanie danych z pliku łączącego się gracza, pobiera je od niego i na ich podstawie przydziela mu postać.
 
 \begin{figure}
 		\centering
