--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -11,6 +11,7 @@
 \promotor{dr. Bartłomieja Kubicy}
 \pworkplace{Wydział Zastosowań Informatyki i Matematyki\\Katedra Zastosowań Informatyki}
 
+\usepackage{setspace}
 %obrazki
 \usepackage{graphicx}
 \usepackage{enumitem}
@@ -20,6 +21,7 @@
 %https://tex.stackexchange.com/questions/28333/continuous-v-per-chapter-section-numbering-of-figures-tables-and-other-docume
 \usepackage{chngcntr}
 \counterwithout{figure}{chapter}
+\setlist{noitemsep}
 
 \begin{document}
 \maketitle
@@ -55,11 +57,12 @@ Przez pojęcie ,,silnik gry`` rozumie się zbiór funkcji i narzędzi ({\em ang.
 %\newline\url{https://docs.unrealengine.com/latest/INT/Engine/index.html}
 UE4 swoją popularność zawdzięcza między innymi otwartemu źródłu, co w pewnym stopniu umożliwia programistom dostosowanie silnika do potrzeb gry na przykład poprzez modyfikacje w działaniu silnika lub tworzenie narzędzi dla reszty zespołu. Ponadto UE4 jest w stanie renderować grafikę bardzo zbliżoną do fotorealizmu, co w połączeniu z szeroką gamą oferowanych funkcji sprawia, że poza grami korzysta się z niego na przykład do produkcji spotów i aplikacji reklamowych \cite{the-human-race}\cite{ikea-vr}.
 \newline \indent Oprócz podstawowych funkcji takich jak renderowanie grafiki czy obsługa sterowania do dyspozycji oddane zostały między innymi \cite{docs-ue4-features}:
+
 \begin{description}
 \item[Symulacja fizyki:]UE4 korzysta z silnika fizyki {\em PhysX 3.3} dzięki czemu wiarygodnie symuluje kolizje obiektów i inne oddziaływania fizyczne. Ponadto edytor umożliwia modyfikację panujących zasad, co pozwala na lepsze przedstawienie wizji autorów gry.
 \item[Edytor interfejsu użytkownika:] Interfejs stanowi istotny element w komunikacji między grą, a grającym. UE4 zapewnia rozbudowany edytor pozwalający na tworzenie między innymi takich elementów interfejsu jak {\em HUD (head-up display)} czy menu.
 \item[Drzewa behawioralne:]Stanowią one podstawę sztucznej inteligencji w UE4 i pozwalają na zaprogramowanie zachowania postaci sterowanych przez komputer w zależności od odbieranych przez nie bodźców i stanu sceny.
-\clearpage \item[Sequencer:]Jest to narzędzie służące do produkcji przerywników filmowych. Jego obsługa przypomina pracę z oprogramowaniem do montażu filmów i modelowania 3D. Edytor ten uwzględnia elementy takie jak oś czasu, ujęcia kamery, szkielety i animacje obiektów.
+\item[Sequencer:]Jest to narzędzie służące do produkcji przerywników filmowych. Jego obsługa przypomina pracę z oprogramowaniem do montażu filmów i modelowania 3D. Edytor ten uwzględnia elementy takie jak oś czasu, ujęcia kamery, szkielety i animacje obiektów.
 \item[Networking:]UE4 powstał z myślą o rozgrywce sieciowej, wobec tego dużo uwagi poświęcono stworzeniu odpowiedniej abstrakcji ułatwiającej programowanie komunikacji sieciowej. Komunikacja ta wykorzystuje model klient-serwer co oznacza, że istnieje jeden serwer z autorytatywną instancją świata oraz wielu klientów, których światy są aktualizowane na podstawie tego, co dzieje się na serwerze. Aktualizacje te opierają się o aktualizacje właściwości obiektów i zdalne wywołania procedur {\em (ang. remote procedure calls - RPC)}. W obu przypadkach wykorzystywany jest protokół {\em UDP}, który jest zawodny, ale generuje o wiele mniejszy narzut na sieć niż w przypadku {\em TCP}. UE4 ma zaimplementowany własny system zapewniający częściową niezawodność komunikacji \cite{unreal-wiki-replication}.
 %https://docs.unrealengine.com/latest/INT/Gameplay/Networking/index.html
 \item[Analiza wydajności:]Osiągnięcie iluzji ruchomego obrazu wymaga wygenerowania przynajmniej 15 klatek na sekundę ({\em ang. frames per second - FPS}), obecnie na konsolach do gier pożądaną wartością jest przynajmniej 30FPS, na komputerach 60FPS\cite{docs-profiler}, a w tytułach esportowych nawet dwa razy więcej. Miara ta jest odzwierciedleniem płynności obrazu i wydajności gry, a na wydajność składają się stopień skomplikowania scen i obliczeń oraz optymalizacja. UE4 zapewnia narzędzia do profilowania, dzięki którym łatwiejsze staje się zidentyfikowanie obszarów wymagających optymalizacji.
@@ -81,7 +84,7 @@ UE4 swoją popularność zawdzięcza między innymi otwartemu źródłu, co w pe
 %\newline\url{https://docs.unrealengine.com/latest/INT/Gameplay/Framework/QuickReference/index.html}
 %\newline obowiazkowo obrazek z dolu strony :D
 Styl rozgrywki zależy od gry i wizji jej autora, jednak istnieją pewne cechy wspólne widoczne w niemal każdym tytule. Jest to na przykład sterowanie za pomocą urządzeń wejścia czy pewien zbiór zasad gry. Z tego powodu w UE4 przyjęto zaprezentowaną poniżej konwencję dotyczącą rozgrywki (rys. \ref{fig-gameplay-chart})\cite{docs-gameplay-framework}.
-\begin{description}
+\begin{description}[itemsep=1\itemsep,parsep=1\parsep,partopsep=1\partopsep,topsep=1\topsep]
 \item[Level:] W terminologii UE4 {\em level} jest zbiorem wszystkich obiektów, które gracz widzi lub może wejść z nimi w interakcje. Stanowi on reprezentację obszaru, w którym toczy się gra.
 \item[Actor:]Jest to bazowa klasa dla każego obiektu, który można umieścić w {\em levelu}. Obiekty te nie muszą mieć fizycznej reprezentacji. Często zawierają dodatkowe komponenty ~({\em ActorComponents}) określające na przykład sposób porusza się obiektu. Oprócz tego {\em actor} posiada obsługę replikacji właściwości i wywołań funkcji przez sieć.
 \item[Pawn:]Jest to {\em actor}, który może być kontrolowany przez gracza lub komputer. Stanowi ich fizyczną reprezentację w grach, które tego wymagają.
@@ -189,11 +192,12 @@ Postać można poruszać za pomocą klawiszy W, A, S oraz D i obrócona jest zaw
 Drążki kontrolera odpowiadają za ruch i kierunek postaci. Przycisk A odpowiada za unik, a B za skok. Zdolności uruchamiane są przyciskami LT, LB, RT i RB.
 \end{description}
 Uruchamianie zdolności działa dwuetapowo. Podczas wciśnięcia klawisza odgrywana jest animacja oraz wykonywany jest kod metody {\em OnPress} z klasy {\em Skill}, który może wykonać całą logikę zdolności lub przygotować naszą postać do momentu gdy gracz zwolni przycisk. Następnie wykona się metoda {\em OnRelease}, która może pozostać pusta, dokończyć wykonanie zdolności lub przywrócić gracza do stanu sprzed kliknięcia przycisku.
-	\subsection{BaseCharacterMovementComponent}
-	{\em CharacterMovementComponent} jest komponentem klasy {\em Character} odpowiedzialnym za przemieszczanie się postaci, który automatycznie obsługuje networking. Komponent ten umożliwia między innymi predykcję, replikację i korekcję ruchu i działa w następujący sposób \cite{docs-charactermovementcomponent}. Co klatkę wywoływana jest metoda {\em TickComponent}, gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie, w zależności od tego, czy program wykonywany jest na kliencie czy na serwerze, wywoływana jest metoda {\em PerformMovement} lub {\em ReplicateMoveToServer}. {\em ReplicateMoveToServer} dodaje ruch do listy oczekujących ruchów, następnie wywołuje metodę {\em PerformMovement} i replikuje ruch na serwer za pomocą zdalnie wywoływanej metody {\em ServerMove}. {\em ServerMove} przesuwa postać na serwerze w odpowiednie miejsce, a następnie oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer zdalnie wywołuje metodę {\em ClientAdjustPosition} na kliencie, która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta, a jego pozycja zostanie poprawiona, metoda {\em ClientAdjustPosition} wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących po ruchu, który został poprawiony przez serwer.
+\subsection{BaseCharacterMovementComponent}
+{\em CharacterMovementComponent} jest komponentem klasy {\em Character} odpowiedzialnym za przemieszczanie się postaci, który automatycznie obsługuje networking. Komponent ten umożliwia między innymi predykcję, replikację i korekcję ruchu i działa w następujący sposób \cite{docs-charactermovementcomponent}. Co klatkę wywoływana jest metoda {\em TickComponent}, gdzie obliczane są zmiany przyspieszenia oraz rotacji postaci. Następnie, w zależności od tego, czy program wykonywany jest na kliencie czy na serwerze, wywoływana jest metoda {\em PerformMovement} lub {\em ReplicateMoveToServer}. {\em ReplicateMoveToServer} dodaje ruch do listy oczekujących ruchów, następnie wywołuje metodę {\em PerformMovement} i replikuje ruch na serwer za pomocą zdalnie wywoływanej metody {\em ServerMove}. {\em ServerMove} przesuwa postać na serwerze w odpowiednie miejsce, a następnie oblicza dystans pomiędzy pozycją postaci na serwerze i na maszynie klienckiej. Jeżeli dystans jest większy niż dopuszczalny, serwer zdalnie wywołuje metodę {\em ClientAdjustPosition} na kliencie, która przesuwa postać w odpowiednie miejsce. Jeżeli dane korekcyjne dotrą do klienta, a jego pozycja zostanie poprawiona, metoda {\em ClientAdjustPosition} wykona ponownie wszystkie ruchy, które zostały dodane na listę ruchów oczekujących po ruchu, który został poprawiony przez serwer.
 \newline \indent Dane o aktorze takie jak jego pozycja, prędkość czy rotacja są replikowane na inne maszyny za pomocą standardowego mechanizmu replikacji. Oznacza to, że maszyny nie dostają potrzebnych im informacji co klatkę, co twórcy silnika rozwiązali za pomocą systemów predykcji i wygładzania. Systemy te wypełniają luki w danych spowodowane rozbieżnością między częstotliwościami renderowania klatek i replikowania danych. Predykcja polega na przesuwaniu obiektu klasy Character zgodnie z ostatnio otrzymanymi danymi na temat jego ruchu. Gdy predykcja odbiega od rzeczywistych zmian, które zaszły na innych maszynach, UE4 nakłada na pozycję stopniowe korekty w celu uniknięcia nagłej jej zmiany.
 \newline \indent Z powodu tych systemów wszystkie zdolności postaci modyfikujące jej położenie powinny zostać zaimplementowane poprzez rozszerzenie klasy {\em CharacterMovementComponent}.
 W celu dodania możliwości uniku polegającego na gwałtownym odskoku postaci w danym kierunku stworzono klasę {\em BaseCharacterMovementComponent}. Implementacja polegała na nadpisaniu metod klasy bazowej\cite{uewiki-charmovement}. TickComponent oprócz swojego pierwotnego zadania sprawdza czy gracz wciska przycisk odpowiedzialny za unik. W takim przypadku dodawane są symulowane dane wejściowe, które naśladują poruszanie się gracza w odpowiednim kierunku. W celu zapewnienia szybszego poruszania się postaci podczas uniku, nadpisano metody {\em GetMaxSpeed} oraz {\em GetMaxAcceleration} tak, aby w zależności od zmiennej wskazującej na to czy postać wykonuje unik, zwracały różne wartości. Ponadto potrzebne było rozszerzenie klas używanych do predykcji i zapisywania ruchu na listę oczekujących w taki sposób, by ewentualna poprawa ruchu spowodowana opóźnieniami transmisji danych uwzględniła kliknięcie przez gracza przycisku uniku.
+\clearpage
 	\subsection{Skill}
 	Jedną z głównych cech gry ,,thesis\_1`` jest możliwość wyboru czterech z wielu dostępnych zdolności do używania w trakcie rozgrywki. W tym celu powstała klasa {\em Skill} reprezentująca zdolność. Klasa ta powstała za pomocą kodu {\em C++} z myślą o rozszerzaniu jej blueprintami, co umożliwiają znaczniki {\em Blueprintable} oraz {\em BlueprintNativeEvent} użyte w nagłówku klasy. Każda klasa dziedzicząca po {\em Skill} reprezentuje jedną zdolność i nadpisuje bazowe funkcje {\em OnPress} oraz {\em OnRelease} logiką danej zdolności. Decyduje też o tym, które klasy postaci mogą używać danej zdolności.
 	\subsection{Wybór postaci i zdolności}
