added album id and empty page at the end

--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
 \maketitle
-\twoppage{Maciej Wygoda}{172407}{ktore rodzialy + strony}{Marcin Szadkowski}{wpisz swoj numer albumu}{ktore rodzialy + strony}
+\twoppage{Maciej Wygoda}{172407}{ktore rodzialy + strony}{Marcin Szadkowski}{167607}{ktore rodzialy + strony}
 \statementpage
 \abstractpage
 {Implementacja sieciowej gry wideo z wykorzystaniem silnika Unreal Engine 4}
@@ -313,5 +313,5 @@ Justin Slick, \textit{What is Rigging? Preparing a 3D Model For Animation }. \ur
 
 
 \beforelastpage
-
+ \thispagestyle{empty} \newpage \null \thispagestyle{empty}
 \end{document} 
