--- a/LaTeX/thesis_1.tex
+++ b/LaTeX/thesis_1.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
 \maketitle
-\twoppage{Maciej Wygoda}{172407}{ktore rodzialy + strony}{Marcin Szadkowski}{167607}{podrozdziału 4.4.1 ze strony 17, podrozdziałów 4.4.2 , 4.4.3 i 4.4.4 ze strony 18, podrozdziału 4.4.5 ze strony 19, podrozdziału 4.6 ze stron 21- 23. }
+\twoppage{Maciej Wygoda}{172407}{}{Marcin Szadkowski}{167607}{rozdzialu 1 ze strony 8, podrozdziału 4.4.1 ze strony 17, podrozdziałów 4.4.2, 4.4.3 i 4.4.4 ze strony 18, podrozdziału 4.4.5 ze strony 19, podrozdziału 4.4.6 ze strony 20,podrozdziału 4.5 ze strony 20, podrozdziału 4.6 ze stron 21- 23. }
 \statementpage
 \abstractpage
 {Implementacja sieciowej gry wideo z wykorzystaniem silnika Unreal Engine 4}
